[build-system]
requires = ["jupyter_packaging~=0.10,<2"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["quetz/frontend/app/static/style.js"]
ensured-targets = ["quetz/frontend/app/static/style.js", "quetz/frontend/app/static/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["yarn"]

[tool.check-manifest]
ignore = ["quetz/frontend/app/build/**", "yarn.lock", ".*", "package-lock.json"]

[tool.pytest.ini_options]
asyncio_mode="strict"

[tool.black]
skip-string-normalization = true

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.jupyter-releaser.options]
check-imports = ["quetz"]

[tool.tbump.version]
current = "0.4.4"
regex = '''
  (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
  ((?P<channel>a|b|rc|.dev)(?P<release>\d+))?
'''

[[tool.tbump.field]]
name = "channel"
default = ""

[[tool.tbump.field]]
name = "release"
default = ""

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "quetz/_version.py"
version_template = '({major}, {minor}, {patch}, "{channel}", "{release}")'
